# StepicHaskell

./: README.md
Stepic.hsproj/: .uuid  Bindings.hs  Functions.hs  Recursion.hs  StepicHaskell.cabal  _Recursion.hsplay
Stepic.hsproj/Basics/: Extensions.hs  Module.hs  NumType.hs  Polymorphism.hs  Reduction.hs  TypeClass.hs  _Extensions.hsplay  _NumType.hsplay  _Polymorphism.hsplay  _Reduction.hsplay  _TypeClass.hsplay
Stepic.hsproj/Intro/: Bindings.hs  Functions.hs  Recursion.hs  _Bindings.hsplay  _Functions.hsplay
Stepic.hsproj/Lists/: ListBasics.hs  ListFunctions.hs  _ListBasics.hsplay  _ListFunctions.hsplay
