name: StepicHaskell
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
author: complexityclass
x-ghc-framework-version: 7.10.3-5.18-2
x-last-ide-version: HfM1.3.2
Executable Problems
  main-is: Intro/Functions.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      Intro.Recursion
      Intro.Bindings
      Basics.TypeClass
      Basics.Polymorphism
